{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 83,
  "lineage": "39161218-db2d-48b3-f54f-22b6a64353d9",
  "resources": [
    {
      "module": "module.backend_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:security-group/sg-048a39e0cb085e93f",
            "description": "SG for Backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048a39e0cb085e93f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP application traffic (8080) to Backend from Bastion host",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0837d1e9e6a6c0e83"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP application traffic (8080) to Backend from VPN",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0689f81e6649b6464"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH access to Backend instances from Bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0837d1e9e6a6c0e83"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH access to Backend instances from VPN network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0689f81e6649b6464"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from Internal ALB to Backend service on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ff0282211b24813"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "carvo-dev-backend",
            "name_prefix": "",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "carvo-dev-backend-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "carvo-dev-backend-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ff5003538b60d5ec",
            "arn": "arn:aws:ec2:ap-south-1:384570460482:instance/i-08c104d034c9d9031",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c104d034c9d9031",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "siva",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-078d48a1f4796d926"
              }
            ],
            "primary_network_interface_id": "eni-078d48a1f4796d926",
            "private_dns": "ip-172-31-1-171.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.171",
            "public_dns": "ec2-15-207-87-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.87.212",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-054eb810036003d23",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030b02576e2912c30",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-bastion",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-bastion",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0837d1e9e6a6c0e83"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_ssm_parameter.rds_password",
            "data.aws_ssm_parameter.rds_username",
            "module.bastion_sg.aws_security_group.sg",
            "module.rds.aws_db_instance.default",
            "module.rds.aws_route53_record.www",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_db_subnet_group.default",
            "module.vpc.aws_subnet.db_subnets",
            "module.vpc.aws_subnet.web_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:security-group/sg-0837d1e9e6a6c0e83",
            "description": "SG for Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0837d1e9e6a6c0e83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "carvo-dev-bastion",
            "name_prefix": "",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "carvo-dev-bastion-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "carvo-dev-bastion-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_cache_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:security-group/sg-04aa137a0bdf06aa7",
            "description": "SG for Elastic Cahe",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04aa137a0bdf06aa7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Redis (6379) access to ElastiCache from Backend application",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048a39e0cb085e93f"
                ],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Allow Redis (6379) access to ElastiCache from Bastion host",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0837d1e9e6a6c0e83"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "carvo-dev-elastic-cache",
            "name_prefix": "",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "carvo-dev-elastic-cache-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "carvo-dev-elastic-cache-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.external_alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:security-group/sg-0506b78b1e56384a4",
            "description": "SG for External ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0506b78b1e56384a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public HTTP traffic from internet to External ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public HTTPS traffic from internet to External ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "carvo-dev-external-alb",
            "name_prefix": "",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "carvo-dev-external-alb-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "carvo-dev-external-alb-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:security-group/sg-01b833d7ad8d4d390",
            "description": "SG for Frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b833d7ad8d4d390",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from External ALB to Frontend service",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0506b78b1e56384a4"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic to Frontend service from Bastion host",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0837d1e9e6a6c0e83"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic to Frontend service from VPN network",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0689f81e6649b6464"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH access to Frontend instances from Bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0837d1e9e6a6c0e83"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH access to Frontend instances from VPN network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0689f81e6649b6464"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "carvo-dev-frontend",
            "name_prefix": "",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "carvo-dev-frontend-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "carvo-dev-frontend-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internal_alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:security-group/sg-00ff0282211b24813",
            "description": "SG for Internal ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ff0282211b24813",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic to Internal ALB from Bastion host",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0837d1e9e6a6c0e83"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic to Internal ALB from Frontend service",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b833d7ad8d4d390"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic to Internal ALB from VPN network",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0689f81e6649b6464"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "carvo-dev-internal-alb",
            "name_prefix": "",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "carvo-dev-internal-alb-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "carvo-dev-internal-alb-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:security-group/sg-0fddd4c6284ea3874",
            "description": "SG for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fddd4c6284ea3874",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL (3306) access to RDS from Backend application",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048a39e0cb085e93f"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL (3306) access to RDS from Bastion host",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0837d1e9e6a6c0e83"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL (3306) access to RDS from VPN instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0689f81e6649b6464"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "carvo-dev-rds",
            "name_prefix": "",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "carvo-dev-rds-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "carvo-dev-rds-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_rules",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion_backend",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP application traffic (8080) to Backend from Bastion host",
            "from_port": 8080,
            "id": "sgrule-4166732167",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-048a39e0cb085e93f",
            "security_group_rule_id": "sgr-02ccd662d423afa8c",
            "self": false,
            "source_security_group_id": "sg-0837d1e9e6a6c0e83",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "bastion_ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH access from anywhere",
            "from_port": 22,
            "id": "sgrule-2729495079",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0837d1e9e6a6c0e83",
            "security_group_rule_id": "sgr-025f54624e91ba1f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "bastion_ssh_backend",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH access to Backend instances from Bastion host",
            "from_port": 22,
            "id": "sgrule-2930687094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-048a39e0cb085e93f",
            "security_group_rule_id": "sgr-0cd3b17cb0586c611",
            "self": false,
            "source_security_group_id": "sg-0837d1e9e6a6c0e83",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "bastion_ssh_frontend",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH access to Frontend instances from Bastion host",
            "from_port": 22,
            "id": "sgrule-800404034",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-01b833d7ad8d4d390",
            "security_group_rule_id": "sgr-07487cb7381c787f2",
            "self": false,
            "source_security_group_id": "sg-0837d1e9e6a6c0e83",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "frontend_internal_alb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP traffic to Internal ALB from Frontend service",
            "from_port": 80,
            "id": "sgrule-763375653",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-00ff0282211b24813",
            "security_group_rule_id": "sgr-05e8b062e15a02331",
            "self": false,
            "source_security_group_id": "sg-01b833d7ad8d4d390",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "http_external_external_alb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow public HTTP traffic from internet to External ALB",
            "from_port": 80,
            "id": "sgrule-16544075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0506b78b1e56384a4",
            "security_group_rule_id": "sgr-07177c75dfd268a26",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "https_external_external_alb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow public HTTPS traffic from internet to External ALB",
            "from_port": 443,
            "id": "sgrule-2460792170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0506b78b1e56384a4",
            "security_group_rule_id": "sgr-0e427cb652be119cf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "vpn_frontend",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP traffic to Frontend service from VPN network",
            "from_port": 80,
            "id": "sgrule-1346935325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-01b833d7ad8d4d390",
            "security_group_rule_id": "sgr-0ea6ee03a2fe4a810",
            "self": false,
            "source_security_group_id": "sg-0689f81e6649b6464",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "vpn_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "This rule allows all traffic from internet on 443",
            "from_port": 443,
            "id": "sgrule-2010444061",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0689f81e6649b6464",
            "security_group_rule_id": "sgr-0016601794cc5e754",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": "vpn_ssh_frontend",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH access to Frontend instances from VPN network",
            "from_port": 22,
            "id": "sgrule-3312845845",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-01b833d7ad8d4d390",
            "security_group_rule_id": "sgr-06d0c2a49937d84bf",
            "self": false,
            "source_security_group_id": "sg-0689f81e6649b6464",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_sg.aws_security_group.sg",
            "module.bastion_sg.aws_security_group.sg",
            "module.elastic_cache_sg.aws_security_group.sg",
            "module.external_alb_sg.aws_security_group.sg",
            "module.frontend_sg.aws_security_group.sg",
            "module.internal_alb_sg.aws_security_group.sg",
            "module.rds_sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main",
            "module.vpn_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:internet-gateway/igw-047fbeac5b681beb8",
            "id": "igw-047fbeac5b681beb8",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-igw",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-igw",
              "Owner": "konka",
              "Project": "carvo"
            },
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "app_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "db_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "web_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-047fbeac5b681beb8",
            "id": "r-rtb-008939e069d835b2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-008939e069d835b2b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.web_rt",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:route-table/rtb-000875213caf4031b",
            "id": "rtb-000875213caf4031b",
            "owner_id": "384570460482",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-app-RT",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-app-RT",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:route-table/rtb-0bd5aaaa453162aea",
            "id": "rtb-0bd5aaaa453162aea",
            "owner_id": "384570460482",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-DB-RT",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-DB-RT",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:route-table/rtb-008939e069d835b2b",
            "id": "rtb-008939e069d835b2b",
            "owner_id": "384570460482",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047fbeac5b681beb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-web-RT",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-web-RT",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ece12ca7572285c",
            "region": "ap-south-1",
            "route_table_id": "rtb-000875213caf4031b",
            "subnet_id": "subnet-0dd396f57a2c957d5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.app_rt",
            "module.vpc.aws_subnet.app_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdfc00738f148a5a",
            "region": "ap-south-1",
            "route_table_id": "rtb-000875213caf4031b",
            "subnet_id": "subnet-096bb031276fa9998"
          },
          "dependencies": [
            "module.vpc.aws_route_table.app_rt",
            "module.vpc.aws_subnet.app_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af9585d9ba03bd5f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0bd5aaaa453162aea",
            "subnet_id": "subnet-05c9c645f98d462b7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.db_rt",
            "module.vpc.aws_subnet.db_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087979600b95cd594",
            "region": "ap-south-1",
            "route_table_id": "rtb-0bd5aaaa453162aea",
            "subnet_id": "subnet-0afd691b4246336ee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.db_rt",
            "module.vpc.aws_subnet.db_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ad0799ab95b6f7c",
            "region": "ap-south-1",
            "route_table_id": "rtb-008939e069d835b2b",
            "subnet_id": "subnet-030b02576e2912c30"
          },
          "dependencies": [
            "module.vpc.aws_route_table.web_rt",
            "module.vpc.aws_subnet.web_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec2a4ae3f9d7c784",
            "region": "ap-south-1",
            "route_table_id": "rtb-008939e069d835b2b",
            "subnet_id": "subnet-0dfc3ae23e68c976d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.web_rt",
            "module.vpc.aws_subnet.web_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:subnet/subnet-0dd396f57a2c957d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd396f57a2c957d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384570460482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-app-subnet-1a",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-app-subnet-1a",
              "Owner": "konka",
              "Project": "carvo"
            },
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:subnet/subnet-096bb031276fa9998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.31.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096bb031276fa9998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384570460482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-app-subnet-1b",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-app-subnet-1b",
              "Owner": "konka",
              "Project": "carvo"
            },
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:subnet/subnet-05c9c645f98d462b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c9c645f98d462b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384570460482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-db-subnet-1a",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-db-subnet-1a",
              "Owner": "konka",
              "Project": "carvo"
            },
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:subnet/subnet-0afd691b4246336ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.31.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afd691b4246336ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384570460482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-db-subnet-1b",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-db-subnet-1b",
              "Owner": "konka",
              "Project": "carvo"
            },
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:subnet/subnet-030b02576e2912c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030b02576e2912c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384570460482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-web-subnet-1a",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-web-subnet-1a",
              "Owner": "konka",
              "Project": "carvo"
            },
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:subnet/subnet-0dfc3ae23e68c976d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfc3ae23e68c976d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384570460482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-web-subnet-1b",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-web-subnet-1b",
              "Owner": "konka",
              "Project": "carvo"
            },
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:vpc/vpc-025b8e29335e5825b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0e24cce5e1c2da5ac",
            "default_route_table_id": "rtb-02aae3d45803de1cf",
            "default_security_group_id": "sg-0afbec43fac9cb4e6",
            "dhcp_options_id": "dopt-01276a2c58bc319a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025b8e29335e5825b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02aae3d45803de1cf",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-vpc",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-vpc",
              "Owner": "konka",
              "Project": "carvo"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04e71ab8d52a5b353",
            "arn": "arn:aws:ec2:ap-south-1:384570460482:instance/i-0adfb3f0b5fcdd11c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adfb3f0b5fcdd11c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "siva",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0598e91a1c80990d3"
              }
            ],
            "primary_network_interface_id": "eni-0598e91a1c80990d3",
            "private_dns": "ip-172-31-2-155.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.155",
            "public_dns": "ec2-13-233-194-60.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.194.60",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-042ff26e1ae0294e9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfc3ae23e68c976d",
            "tags": {
              "Environment": "dev",
              "Name": "dev-carvo-vpn",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-carvo-vpn",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0689f81e6649b6464"
            ]
          },
          "dependencies": [
            "data.aws_ami.openvpn",
            "module.vpc.aws_cloudwatch_log_group.example",
            "module.vpc.aws_db_subnet_group.default",
            "module.vpc.aws_eip.eip_nat",
            "module.vpc.aws_flow_log.example",
            "module.vpc.aws_iam_role.example",
            "module.vpc.aws_iam_role_policy.example",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_route.app_nat_route",
            "module.vpc.aws_route.db_nat_route",
            "module.vpc.aws_route.web_route",
            "module.vpc.aws_route_table.app_rt",
            "module.vpc.aws_route_table.db_rt",
            "module.vpc.aws_route_table.web_rt",
            "module.vpc.aws_route_table_association.app_subnet_association",
            "module.vpc.aws_route_table_association.db_subnet_association",
            "module.vpc.aws_route_table_association.web_subnet_association",
            "module.vpc.aws_subnet.app_subnets",
            "module.vpc.aws_subnet.db_subnets",
            "module.vpc.aws_subnet.web_subnets",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.this",
            "module.vpc.data.aws_iam_policy_document.assume_role",
            "module.vpc.data.aws_iam_policy_document.example",
            "module.vpn_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:384570460482:security-group/sg-0689f81e6649b6464",
            "description": "SG for VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0689f81e6649b6464",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This rule allows all traffic from internet on 1194",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This rule allows all traffic from internet on 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This rule allows all traffic from internet on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This rule allows all traffic from internet on 943",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              }
            ],
            "name": "carvo-dev-vpn",
            "name_prefix": "",
            "owner_id": "384570460482",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "carvo-dev-vpn-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "carvo-dev-vpn-sg",
              "Owner": "konka",
              "Project": "carvo"
            },
            "timeouts": null,
            "vpc_id": "vpc-025b8e29335e5825b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}